* Added comments to the stock striker.conf for tuning anvil-kick-apc-ups. * The 'tools/anvil-generate-iso' tool now checks-out or update the striker github repo. * The same tool now also checks to see if the source ISO had 'syslinux' and, if not, uses 'isolinux' to create the 'syslinux' directory. * Made missing packages trigger a failure, except for 'iso-read' and 'isoinfo'.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -147,6 +147,18 @@ alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",
 # cycle will restore normal operation.
 tools::anvil-kick-apc-ups::enabled	=	0
 
+# If you enable 'anvil-kick-apc-ups', which turns the UPSes into a rack-wide 
+# watchdog time, you can control the shutdown timer, restart timer and the 
+# frequency that the UPSes are "kicked" using these variables. 
+# 
+# This controls how far in the future to tell the UPS to shut off. The default
+# is '600' (ten minutes).
+#sys::apc::ups::power_off_delay		=	600
+#
+# If the timer runs out and the UPS shuts down, this controls how long the UPS
+# "sleeps" for before turning back on. The default is '300' (5 minutes).
+#sys::apc::ups::sleep_time		=	300
+
 # Setting this to '1' will enable 'safe_anvil_start'. Use this when you have
 # finished building and testing your Anvil!. Set this to '0' to disable the
 # Anvil! autostart when you plan to do maintenance on the node.
