* Started work on a new function to allow a user to specify 'cold' migration of servers as well as pre and post migration scripts. * Starting work on the function to prep the Anvil! ISO build environment (settings the date and getting the .discinfo and repodata XML file name). * Clear out the to-be-replaced repodata files in the Anvil! ISO source. * Updated the ISO tool to create distro-specific build directories so that a user can create both CentOS and RHEL based Anvil! ISOs. * Fixed the build environment to support building RHEL-based ISOs. To do this, some RPMs had to be added to the AN!Repo because they're not available on any official ISO from Red Hat. When building CentOS, the CentOS official RPMs are pulled over. When building RHEL, the AN!Repo RPMs are downloaded instead.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -689,36 +689,16 @@ remote-usb::enable_remote_usb_mount	=	0
 # Server Configuration                                                        #
 ###############################################################################
 
-# A user may wish for servers to boot in a certain order and with possible
-# delays between machine boots. This section allows for this configuration.
-# 
-# Server boot ordering is configured by defining each server with a unique
-# variable integer. This integer has no bearing on the boot order, it simply
-# provides a way to distinguish between entries.
-# 
-# The values are in the form: "(boot order):(delay):(server name)".
-# 
-# Any undefined server will be booted as if it were set to '1:0:x' and, thus,
-# will boot immediately.
-# 
-# One or more servers can have the same 'boot order' value. All servers in the
-# lower boot order must been before the next boot order is evaluated. Once a
-# server is ready for boot, the 'delay' will be checked. If a delay is set, 
-# it will sleep for the defined number of seconds before actually starting.
-# 
-# So in the example set below;
-# 1. vm01-foo and vm02-bar will be booted without delay
-# 2. vm04-bang will boot once set #1 servers have booted without delay, but 
-#    vm03-baz will wait 30 seconds before booting.
-# 3. vm05-boop will boot once set #2 servers have booted.
-# 
-# If a given server fails to boot, the servers is subsequent sets will not 
-# boot.
-#server::boot_order::vm01-foo			=	1:0
-#server::boot_order::vm02-bar			=	1:0
-#server::boot_order::vm03-baz			=	2:30
-#server::boot_order::vm04-bang			=	2:0
-#server::boot_order::vm05-boop			=	3:60
+# By default, servers will be set to "Live" migrate (move to the other host 
+# node) without shutting down the server. This is preferred almost all of the
+# time because it causes no interruption in service. In some corner cases 
+# though, live-migration is not ideal. In such cases, it is better to 
+# gracefully shut down the server and then reboot it on the new host. This can
+# be configured per-server in Striker and changed at any time. This option
+# allows you to change the default set for new servers to 'cold' (default is
+# 'live'). If this is used, all *new* servers will use this migration method.
+# Note that existing servers will *not* be changed.
+#sys::default::migration_type			=	cold
 
 # If you need to specify a custom queue length for the interface linking your
 # servers to the Anvil!'s bridge, you can do so by setting the variable below.
