* This should fix issue #51 where ScanCore's DB wouldn't initialize but this fix is untested yet. ** Fixed a bug in scan-server that was preventing it from running. ** Added '--one-shot' to ScanCore so that it will run one scan and exit (useful when debugging along with --force). * Switched out 'safe_anvil_start' with the newer, smarted 'anvil-safe-start' (untested).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -159,10 +159,10 @@ tools::anvil-kick-apc-ups::enabled	=	0
 # "sleeps" for before turning back on. The default is '300' (5 minutes).
 #sys::apc::ups::sleep_time		=	300
 
-# Setting this to '1' will enable 'safe_anvil_start'. Use this when you have
+# Setting this to '1' will enable 'anvil-safe-start'. Use this when you have
 # finished building and testing your Anvil!. Set this to '0' to disable the
 # Anvil! autostart when you plan to do maintenance on the node.
-tools::safe_anvil_start::enabled	=	0
+tools::anvil-safe-start::enabled	=	0
 
 # If you plan to use Virtual Machine Manager with a GUI install on your Striker
 # dashboards, setting this option to '1' will add the Striker user's public RSA
@@ -983,8 +983,8 @@ remote-usb::enable_remote_usb_mount	=	0
 # maintenance. 
 # 
 # This can be enables and disabled using:
-# /sbin/striker/safe_anvil_start --{enable,disable}
-#sys::install_manifest::use_safe_anvil_start			=	1
+# /sbin/striker/anvil-safe-start --{enable,disable}
+#sys::install_manifest::use_anvil-safe-start			=	1
 
 
 ###############################################################################
