* Fixed issue #45 - Media Library now properly uploads and downloads files. Files that fail to download are automatically removed so that 0-byte files aren't left behind. * Extended Media Library to now support upload and downloading files with a 'script' flag. When set, the files is chmod'ed to 755. Existing files can have their executable bit toggled by a new pair of icons listed to the right of each file. Files recognized as optical media get a plastic circle icon and can not have their bit flipped. * Added three new icons for Media Lirary. * Created AN::Tools::Check->access() that returns '1' if ssh access to the target is available, 0 otherwise. * Extended AN::Tools::Get->shared_files() to query and return partition information for /shared. * Reworded some of the text in striker.conf to clarify variable use.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -145,6 +145,9 @@ alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",
 # switch stack failure that knocks out all networking. The goal is to force a
 # hard reset of the entire rack in such a case, in the hopes that the power-
 # cycle will restore normal operation.
+# 
+# This can be enables and disabled using:
+# /sbin/striker/anvil-kick-apc-ups --{enable,disable}
 tools::anvil-kick-apc-ups::enabled	=	0
 
 # If you enable 'anvil-kick-apc-ups', which turns the UPSes into a rack-wide 
@@ -159,9 +162,32 @@ tools::anvil-kick-apc-ups::enabled	=	0
 # "sleeps" for before turning back on. The default is '300' (5 minutes).
 #sys::apc::ups::sleep_time		=	300
 
-# Setting this to '1' will enable 'anvil-safe-start'. Use this when you have
-# finished building and testing your Anvil!. Set this to '0' to disable the
-# Anvil! autostart when you plan to do maintenance on the node.
+# The 'anvil-safe-start' tool, when enabled, will run when a node powers on.
+# It will perform various sanity checks, including trying to connect to the 
+# peer node. If it can reach the peer, it will join the nodes to the cluster
+# stack and then boot servers on the preferred host if possible, or on the
+# healthiest node when not.
+# 
+# This variable controls when 'anvil-safe-start' runs. If set to '1', it will
+# run within one minute and that run will reset this back to '0'. On node boot,
+# an rc3.d script changes this value to '1' and exits (so that the run doesn't
+# block the boot process). Once it runs, anvil-safe-start resets this to 0 so
+# that it won't run again until the next reboot.
+# 
+# If you want to disable anvil-safe-start entirely, please use:
+# 
+# /sbin/striker/anvil-safe-start --disable
+# 
+# To re-enable this feature later, use:
+# 
+# /sbin/striker/anvil-safe-start --enable
+# 
+# Note that servers set to 'Do Not Start' in Striker, or that were gracefully
+# shut off in striker, will stay off. Servers stopped as part of a Cold 
+# Shutdown and any servers running after a total loss of power or an emergency
+# shutdown will start.
+# 
+# DO NOT CHANGE THIS VALUE MANUALLY.
 tools::anvil-safe-start::enabled	=	0
 
 # If you plan to use Virtual Machine Manager with a GUI install on your Striker
@@ -971,19 +997,18 @@ remote-usb::enable_remote_usb_mount	=	0
 # The risk though is that a manual shutdown of the nodes by an unaware 
 # administrator (who fails to manually stop the timer) could cause the rack to
 # lose all power unexpectedly.
-# 
-# This can be enables and disabled using:
-# /sbin/striker/anvil-kick-apc-ups --{enable,disable}
 #sys::install_manifest::use_anvil-kick-apc-ups			=	1
 
 # When this is set to '1', an Anvil! node will do some sanity checks when it 
 # boots. If all is well and it can communicate with it's peer, it will start
-# the cluster stack and boot all servers. In most cases this is safe and a
-# desired behaviour, but it can cause unexpected server boots during manual
-# maintenance. 
+# the cluster stack and boot server that had been running before the shutdown.
 # 
-# This can be enables and disabled using:
-# /sbin/striker/anvil-safe-start --{enable,disable}
+# Note that servers set to 'Do Not Start' in Striker, or that were gracefully
+# shut off in striker, will stay off. Servers stopped as part of a Cold 
+# Shutdown and any servers running after a total loss of power or an emergency
+# shutdown will start.
+# 
+# Setting this to '0' will disable this feature in future Install Manifests.
 #sys::install_manifest::use_anvil-safe-start			=	1
 
 
