* Added support to Install Manifest for power transfer switches (PTSes).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -887,6 +887,12 @@ remote-usb::enable_remote_usb_mount	=	0
 #sys::install_manifest::default::ups2_name			=	an-ups02
 #sys::install_manifest::default::ups2_ip				=	10.20.3.2
 
+# This configures the optional automatic power transfer switches.
+#sys::install_manifest::default::pts1_name			=	an-pts01
+#sys::install_manifest::default::pts1_ip				=	10.20.5.1
+#sys::install_manifest::default::pts2_name			=	an-pts02
+#sys::install_manifest::default::pts2_ip				=	10.20.5.2
+
 # This tells the nodes where to find the dashboards.
 #sys::install_manifest::default::dashboard1_name			=	an-striker01
 #sys::install_manifest::default::dashboard1_bcn_ip		=	10.20.4.1
@@ -931,24 +937,25 @@ remote-usb::enable_remote_usb_mount	=	0
 #sys::install_manifest::show::sequence_field			=	1
 #sys::install_manifest::show::domain_field			=	1
 #sys::install_manifest::show::password_field			=	1
-#sys::install_manifest::show::bcn_network_fields			=	1
+#sys::install_manifest::show::bcn_network_fields		=	1
 #sys::install_manifest::show::sn_network_fields			=	1
-#sys::install_manifest::show::ifn_network_fields			=	1
+#sys::install_manifest::show::ifn_network_fields		=	1
 #sys::install_manifest::show::library_fields			=	1
 #sys::install_manifest::show::pool1_fields			=	0
 #sys::install_manifest::show::repository_field			=	0
 
 # Shared variables
-#sys::install_manifest::show::name_field				=	1
-#sys::install_manifest::show::dns_fields				=	1
-#sys::install_manifest::show::ntp_fields				=	1
+#sys::install_manifest::show::name_field			=	1
+#sys::install_manifest::show::dns_fields			=	1
+#sys::install_manifest::show::ntp_fields			=	1
 
 # Foundation pack
 #sys::install_manifest::show::switch_fields			=	1
-#sys::install_manifest::show::ups_fields				=	1
-#sys::install_manifest::show::pdu_fields				=	1
+#sys::install_manifest::show::ups_fields			=	1
+#sys::install_manifest::show::pts_fields			=	1
+#sys::install_manifest::show::pdu_fields			=	1
 #sys::install_manifest::show::dashboard_fields			=	1
-
+	
 # Nodes 
 #sys::install_manifest::show::nodes_name_field			=	1
 #sys::install_manifest::show::nodes_bcn_field			=	1
@@ -961,7 +968,7 @@ remote-usb::enable_remote_usb_mount	=	0
 # When set to '0', the results of checking for an internet connection or 
 # checking RHEL-based nodes against the Red Hat Network are suppressed.
 #sys::install_manifest::show::internet_check			=       0
-#sys::install_manifest::show::rhn_checks				=       0
+#sys::install_manifest::show::rhn_checks			=       0
 
 # Setting this to '1' switches the Install Manifest to 'Expert Mode', 
 # dramatically reducing the amount of help-text displayed beside each form
