--- a/striker.conf
+++ b/striker.conf
@@ -161,6 +161,14 @@ tools::anvil-kick-apc-ups::enabled	=	0
 # If the timer runs out and the UPS shuts down, this controls how long the UPS
 # "sleeps" for before turning back on. The default is '300' (5 minutes).
 #sys::apc::ups::sleep_time		=	300
+#
+# The kick script is started once a minute. If you want to reduce the frequency
+# that the UPSes are actually kicked, set this value to how many seconds you 
+# want to wait between kicks. We stick with 'seconds' for consistency with
+# other variables, but it will be rounded to minutes. For example, to perform 
+# the actual kick once every five minutes (one in five runs), set this to 
+# '300'.
+#sys::apc::ups:kick_frequency		=	300
 
 # The 'anvil-safe-start' tool, when enabled, will run when a node powers on.
 # It will perform various sanity checks, including trying to connect to the 
