* Fixed a typo in striker.conf. * Several changes to tools/anvil-kick-apc-ups; ** Warnings added to the usage page and the variable comments in striker.conf warning of the danger of auto-energizing output power. ** Added '--{state,status}' that prints out whether it is enabled or not and whether it is running or not. ** Added '--all-on' (NOT TESTED!) that, when called, powers on all UPSes and energizes all outlet groups. ** Added a call each time the UPS is kicked to explicitely energize both outlet groups. ** Enabled support for sys::apc::ups::kick_frequency, so the user can now adjust the kick frequency.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -148,6 +148,13 @@ alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",
 # 
 # This can be enables and disabled using:
 # /sbin/striker/anvil-kick-apc-ups --{enable,disable}
+# 
+# The current state can be checked with '--status'.
+# 
+# WARNING: Be sure to affix a warning on the UPS outlets indicating that the 
+#          outlets may become energized automatically if this is enabled. 
+#          Failure to warn maintenance personel may result in injury or death!
+#
 tools::anvil-kick-apc-ups::enabled	=	0
 
 # If you enable 'anvil-kick-apc-ups', which turns the UPSes into a rack-wide 
@@ -168,7 +175,7 @@ tools::anvil-kick-apc-ups::enabled	=	0
 # other variables, but it will be rounded to minutes. For example, to perform 
 # the actual kick once every five minutes (one in five runs), set this to 
 # '300'.
-#sys::apc::ups:kick_frequency		=	300
+#sys::apc::ups::kick_frequency		=	300
 
 # The 'anvil-safe-start' tool, when enabled, will run when a node powers on.
 # It will perform various sanity checks, including trying to connect to the 
