* Finished converting striker-usb-insert and striker-use-remove to use nfs instead of sshfs. * Added support for user-configurable mount options (server and guest). * Deleted some obsolete functions and function calls from striker-usb.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -641,7 +641,7 @@ scancore::disable::boot_nodes		=	0
 # server directly, from the user's perspective.
 # 
 # It works by mounting a USB storage locally, then connecting to the target
-# server and uses sshfs to mount it on the target. In this way, the drive will
+# server and uses nfs to mount it on the target. In this way, the drive will
 # appear automatically on the user's desktop (or at a defined mount point)
 # automatically, and clean itself up automatically, when a USB drive is
 # inserted or removed from the host.
@@ -680,6 +680,7 @@ remote-usb::enable_remote_usb_mount	=	0
 #remote-usb::local::user		=	root
 #remote-usb::local::password		=	secret
 #remote-usb::local::mount		=	/mnt/remote
+#remote-usb::local::export_options	=	-i -o rw,sync,no_root_squash
 
 # This configured which remote host to mount the USB drive on. Note that
 # because of how sshfs works, only the user set below will be able to access
@@ -694,6 +695,7 @@ remote-usb::enable_remote_usb_mount	=	0
 #remote-usb::remote::user		=	root
 #remote-usb::remote::password		=	secret
 #remote-usb::remote::mount		=	/mnt/remote
+#remote-usb::remote::mount_options	=	-t nfs -o sync
 
 # It is possible to decrypt LUKS-encrypted partition, provided the LUKS key is
 # provided. At this time, only one global LUKS key is supported. Enter it in
