* Fixed a weird issue where XML::Simple suddenly deviced it just *had* to be invoked with 'KeyAttr => {}'. * While mucking with the above, I also added a bunch of logging to the parsed values and fixed a bug (possibly related to above, possibly me being dumb) where the disk cache wasn't parsed out properly. * Fixed a bug where PTS fields in Install Manifest were accidentally made required.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -676,6 +676,10 @@ remote-usb::enable_remote_usb_mount	=	0
 # Striker will translate into the current dashboard's host name. This way, the
 # same/sync'ed striker.conf will work on both nodes.
 # 
+# NOTE: when using multiple options with 'export_options', do NOT use multiple
+#       '-o X -o Y' calls! Use '-o x,y' or else the NFS mount will be 
+#       read-only.
+# 
 #remote-usb::local::host		=	#!short_hostname!#
 #remote-usb::local::user		=	root
 #remote-usb::local::password		=	secret
