* Changed anvil-safe-start to have configurable boosted resync speed and maximum wait time. Also changed the default maximum wait time from 600 to 300 seconds.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -205,6 +205,27 @@ tools::anvil-kick-apc-ups::enabled	=	0
 # DO NOT CHANGE THIS VALUE MANUALLY.
 tools::anvil-safe-start::enabled	=	0
 
+# During anvil-safe-start, when it first connects the replicated storage layer,
+# it checks to see if one of the nodes is 'Inconsistent'. If it is, it will 
+# pause the boot process, boost the resync speed and then wait 15 seconds. Then
+# it will check to see the estimated timed to reach full resync. 
+# 
+# If it is less than 'max_wait_time', it will continue to wait, watching the 
+# resync process. Once it reaches UpToDate/UpToDate on both nodes, it will 
+# restore the default resync speed and proceed with the boot process.
+# 
+# If the estimated resync time, after boosting, is higher that 'max_wait_time',
+# the resync speed will be reset to default and the boot process will proceed
+# with the Inconsistent node being treated as degraded (meaning servers will 
+# likely not boot on it).
+# 
+# By default, the boosted speed is 80 MB/sec and the maximum wait time is five
+# minutes (300 seconds). If you wish to tune these values, you can do so here.
+# Please use integers only!
+# 
+#anvil-safe-start::drbd::boost_speed	=	80
+#anvil-safe-start::drbd::max_wait_time	=	300
+
 # If you plan to use Virtual Machine Manager with a GUI install on your Striker
 # dashboards, setting this option to '1' will add the Striker user's public RSA
 # keys on each managed Anvil!. This will prevent the need for the user to
