* Fixed a but in AN::Tools::Remote->add_target_to_known_hosts() where the current user, rather than the requested user's, home directory was returned. * Fixed a whole pile of typos in striker.conf thanks to user feedback. * Added a new function called 'check_if_protected' to striker-usb-insert that will NOT force-initialize a USB device with the '.protected' file in the root. * Added the 'print_usage' function to ScanCore but have NOT yet written the actual help.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -155,6 +155,10 @@ alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",
 #          outlets may become energized automatically if this is enabled. 
 #          Failure to warn maintenance personel may result in injury or death!
 #
+# NOTE: This is default-off (0) on dashboards. It will be set to '1' on nodes
+#       when 'sys::install_manifest::use_hap-kick-apc-ups' is set to '1' when
+#       an install manifest is generated. On CCRS, this is always set to '1'.
+#
 tools::anvil-kick-apc-ups::enabled	=	0
 
 # If you enable 'anvil-kick-apc-ups', which turns the UPSes into a rack-wide 
@@ -244,7 +248,7 @@ tools::striker-push-ssh::enabled	=	1
 # effect unless 'virt-manager' is installed.
 tools::striker-configure-vmm::enabled	=	1
 
-# By default, Striker will sync with it's peer when its configuration changes
+# By default, Striker will sync with its peer when its configuration changes
 # via the web interface. This works by looking at the 'scancore::x::host'
 # entries, matching the local machine with one entry and selecting the other
 # as the peer node. The database password needs to be the same as the root
@@ -379,7 +383,7 @@ scancore::disable::boot_nodes		=	0
 
 # ScanCore itself:
 #scancore::log_file			=	/var/log/ScanCore.log
-#scancore::log_level			=	2
+#scancore::log_level			=	1
 #scancore::log_language			=	en_CA
 #scancore::language			=	en_CA
 #scancore::log_db_transactions		=	0
@@ -448,7 +452,7 @@ scancore::disable::boot_nodes		=	0
 # power down before the UPSes completely deplete.
 # 
 # The minimum charge percentage should be set to a high enough number to handle
-# losing powert during the boot process. To know this percentage depends a lot
+# losing power during the boot process. To know this percentage depends a lot
 # on your environment. To calculate it, look at the load on your UPSes under
 # normal operation (as a number of watts). Then consult your UPS's "Runtime" or
 # "Hold-Up Time" chart. This will tell you how many minutes your UPS will run 
@@ -487,12 +491,12 @@ scancore::disable::boot_nodes		=	0
 # ScanCore will initiate a withdrawl and power down of the node.
 #scancore::temperature::shutdown_limit	=	5
 
-# When a node goes into thermal shutdown, many of it's temperature (and other)
+# When a node goes into thermal shutdown, many of its temperature (and other)
 # sensors go offline. So a dashboard has a limited ability to determine if it
 # is safe to boot a node back up. 
 # 
 # To account for this, when a node is in a thermal emergency stop, the 
-# dashboard will check it's own temperature (if it has temp sensors) and if it
+# dashboard will check its own temperature (if it has temp sensors) and if it
 # is OK, it will read the node's 'Ambient' and 'Systemboard' (or the sensors
 # defined by you in 'scan-ipmitool::offline_sensor_list' (or similar from other
 # scan agents). 
@@ -594,7 +598,7 @@ scancore::disable::boot_nodes		=	0
 # When a node is shut down because the temperature got too high or low, most
 # of the thermal sensors stop reporting data. In most cases, though, the
 # 'Ambient' and 'Systemboard' remain readable. By default, the dashboard will
-# check it's own temperature and, if that is OK, check these sensors on the
+# check its own temperature and, if that is OK, check these sensors on the
 # target node to determine if the node is safe to boot back up. If your nodes
 # use different names, or if you have access to additional sensors, you can
 # change the list of sensors checked by specifying them here as a 
@@ -620,7 +624,7 @@ scancore::disable::boot_nodes		=	0
 # Most Striker Dashboards run commodity hardware and, thus, do not have IPMI.
 # When a dashboard does have IPMI, it can make a much more informed decision
 # about whether it is safe to boot a node that has gone into thermal shutdown
-# because it will be able to check all of it's own sensors. If any are in a
+# because it will be able to check all of its own sensors. If any are in a
 # 'warning' state, it will not boot the nodes. This is excellent when dealing
 # with a data center or room that has lost cooling.
 # 
@@ -807,7 +811,7 @@ remote-usb::enable_remote_usb_mount	=	0
 # Default Install Manifest value overrides                                    #
 ###############################################################################
 
-# By default, Striker checks it's own hostname for a prefix (x-striker0Y) and
+# By default, Striker checks its own hostname for a prefix (x-striker0Y) and
 # uses that as the default prefix for new manifests. You can override this
 # behaviour using this variable. Setting it to a blank value prevents any 
 # prefix from being set.
@@ -817,7 +821,7 @@ remote-usb::enable_remote_usb_mount	=	0
 # different value to change this.
 #sys::install_manifest::default::sequence			=	01
 
-# By default, Striker looks at it's own fully qualified hostname and uses the
+# By default, Striker looks at its own fully qualified hostname and uses the
 # domain name portion to set the default domain name. You can force a different
 # domain name using this variable.
 #sys::install_manifest::default::domain				=	example.com
@@ -1049,7 +1053,7 @@ remote-usb::enable_remote_usb_mount	=	0
 #sys::install_manifest::use_anvil-kick-apc-ups			=	1
 
 # When this is set to '1', an Anvil! node will do some sanity checks when it 
-# boots. If all is well and it can communicate with it's peer, it will start
+# boots. If all is well and it can communicate with its peer, it will start
 # the cluster stack and boot server that had been running before the shutdown.
 # 
 # Note that servers set to 'Do Not Start' in Striker, or that were gracefully
