* Added the new 'tools/anvil-usb-installer' tool which will, when done (it's not at all yet) allow a user to convert a USB drive to an installable target for Striker dashboards. * Restored the bonding reselect method to 'always' after a report from a user indicating it caused problems with a recent kernel. Will revisit this later. Also dropped the updelay to 60 seconds as that seems to be long enough in most cases. * Made the delay between anvil-safe-start boosting the drbd resync speed and checking the eta to sync user-configurable. * Fixed a problem with tools/anvil-generate-iso not working on RHEL images. In the process, I changed the @core group to be the actual list of packages to install (though in the end it wasn't needed, I'm not going to bother rolling it back). The tool now supports two RPM group XML files for RHEL sourced ISOs when calling createrepo. Also, when installing a RHEL sourced ISO, the 'yum-plugin-priorities' package is not added to the kickstart now.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -211,8 +211,9 @@ tools::anvil-safe-start::enabled	=	0
 
 # During anvil-safe-start, when it first connects the replicated storage layer,
 # it checks to see if one of the nodes is 'Inconsistent'. If it is, it will 
-# pause the boot process, boost the resync speed and then wait 15 seconds. Then
-# it will check to see the estimated timed to reach full resync. 
+# pause the boot process, boost the resync speed and then wait 
+# 'anvil-safe-start::drbd::resync_delay' seconds (default is 15). Then it will 
+# check to see the estimated timed to reach full resync. 
 # 
 # If it is less than 'max_wait_time', it will continue to wait, watching the 
 # resync process. Once it reaches UpToDate/UpToDate on both nodes, it will 
@@ -229,6 +230,7 @@ tools::anvil-safe-start::enabled	=	0
 # 
 #anvil-safe-start::drbd::boost_speed	=	80
 #anvil-safe-start::drbd::max_wait_time	=	300
+#anvil-safe-start::drbd::resync_delay	=	15
 
 # If you plan to use Virtual Machine Manager with a GUI install on your Striker
 # dashboards, setting this option to '1' will add the Striker user's public RSA
