* This adds 'check_for_dlm_hang()' and 'check_for_dlm_hang()' to ScanCore which provides the ability, if the user enables it via 'scancore::dashboard::dlm_hung_timeout = X', to have Striker dashboards check to see if a node is hung (usually by a DLM spinlock after a failed fence) and if so, fence the node dirctly from the dashboard. This feature should handle the corner cases where everything goes sideways. It will fence one or both nodes, depending on how things failed. It will NOT fence a node UNLESS it can log into the node over SSH (calls 'echo 1') AND a call to 'ls /shared' fails to return at all. So a node that has been withdrawn will NOT get fenced, nor will a node that can't be reached over SSH. This resolves issue #33. * Cleaned up a bunch of ',' for ';' in AN::Tools.pm. * Added AN::Tools::Get->node_info(); that takes a node name and returns information about it.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -350,6 +350,27 @@ scancore::enabled			=	1
 # good and that the nodes were not cleanly stopped via Striker's WebUI.
 scancore::disable::boot_nodes		=	0
 
+# Setting this to an integer will enable a post-scan check of nodes (from the 
+# dashboard) to see if a node's cluster lock manager is hung (as could happen
+# in some rare dual-failure scenarios). If set, the value will be used as a
+# timout (in seconds) for the node to respond to a check of its cluster status.
+# If the query doesn't return in the set number of seconds, the node will be
+# considered hung and the dashboard will fence it. Setting this to '0' 
+# (default) will disable this feature. 
+# 
+# NOTE: This test will NOT be used if the node can't be reached, or if the HA
+#       stack is simply stopped. The only case where the node will be fenced
+#       is if the dashboard can log into the node *and* the 'ls /shared' 
+#       command fails to return at all in the requested timeout.
+#       
+# WARNING: This feature can not differentiate between spinlocks and normal high
+#          load. If you expect that a node might be placed under very high 
+#          load, set this value high enough to account for slow responses. This
+#          feature is powerful in remote deployments in particular, but care
+#          should be taken when choosing to enable it.
+scancore::dashboard::dlm_hung_timeout	=	0
+
+
 ### Logging and Language
 # ScanCore itself, plus each agent, can have customized log levels, language,
 # log files. You can also customize the language used when ScanCore or an agent
