* Added a check to AN::Tools::DB->do_db_query() to fail more gracefully if there is no active DB connections available. * Renamed the 'server' ScanCore table to 'servers' to be more consistent with other DB table names. * Started reworking AN::Tools::Get.pm->local_anvil_details() with the eventual goal of having it work by falling back to checking the local system data when there is no active DB connection. * Created AN::Tools::ScanCore.pm->get_servers() to return information about known servers. * Added (nut not yet tested) support for ScanCore sending alert emails via an alternate (backup) SMTP server (smtp::alt_server, smtp::alt_port). * Fixed a bug in the scan-server agent where the Database was queried before the connection was made.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -13,12 +13,19 @@
 # This configures how email is sent from this machine. Please be sure to set
 # the values below to the values given to you by your mail administrator (if
 # that's not you).
+# 
+# If you wish to enable redundant alert email delivery, you can do so by 
+# setting 'smtp::alt_server', which will be used if/when 'smtp::server' can't
+# be reached. Please note that the credentials (user name and password) must
+# be the same on both servers for this to work.
 #
 # This is the mail server to connect to when sending email.
 smtp::server			=	mail.example.com
+smtp::alt_server		=	mail2.alteeve.com
 
-# This is the TCP port used to connect to the mail server.
+# This is the TCP port used to connect to the mail server(s).
 smtp::port			=	587
+smtp::alt_port			=	587
 
 # This is the email address/IMAP user to send to the mail server. It is also
 # the address used in the "From: " field for emails sent from this machine.
