* The Striker main WebUI page displays again! Still very very broken, but this is a big milestone in the code cleanup and ScanCore DB migration! * Created the (blank for now) AN::Tools::HardwareLSI module that will host all of the LSI functions shortly. * Fixed a bug in 'AN::Tools::Get->date_and_time()' method where variables weren't declared after the changes from the last commit. * Fixed several bugs in the new InstallManifest.pm. * Updated the various display methods in the new Striker.pm to get displaying the main page working. * Moved the following methods into the new Striker.pm from the old one: ** update_peers ** _display_anvil_safe_start_notice ** _display_details ** _display_drbd_details ** _display_free_resources ** _display_gfs2_details ** _display_node_controls ** _display_node_details ** _display_server_details ** _display_vm_state_and_controls ** _display_watchdog_panel ** _header * Moved the 'initialize' and 'initialize_conf' functions out of the old 'Common.pm' into 'striker' and 'mediaLibrary' to get closer to removing Common.pm. This leaves the functions duplicated, but so be it... The old modules need to die. * Updated Striker.pm->load_anvil() to record each node's short host name. * Fixed a bug in Striker.pm->_post_node_calculations() where the node name was being passed into _write_node_cache() instead of the node's UUID. * Updated striker.conf to now support scancore::db:X::ssh_port, scancore::db::X::no_sync and striker::peers::configure_anvils to let the user better control which Striker dashboards are updated when an Anvil! is saved or edited. * Fixed a bug in anvil-safe-start() to fix a typo in the module name when calling $an->Striker->mark_node_as_clean_on(). * Updated striker-configure-vmm and striker-push-ssh to get the Anvil! data from the ScanCore database.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -323,6 +323,22 @@ scancore::enabled			=	1
 #
 # ScanCore database password
 #scancore::db::X::password
+#
+# While we wait for the Spice HTML5 client to mature, Striker will 
+# automatically setup passwordless SSH from the admin user of Striker 
+# dashboards to Anvil! nodes. These peers are generally the same as the 
+# machines hosting ScanCore databases, so these variables server a 
+# double-purpose of telling one Striker dashboards who its peers are. When an
+# Anvil! is added or edited, by default, the 'striker-push-ssh' and the 
+# 'striker-configure-vmm' tools are run on all peers. If you need to specify a
+# non-standard port for SSH to a peer, you can use:
+#scancore::db:X::ssh_port
+#
+# You can prevent this behaviour on a per-peer basis with:
+#scancore::db::X::no_sync = 1
+#
+# You can globally disable this feature with:
+#striker::peers::configure_anvils = 0
 # 
 #scancore::db::1::host			=	an-striker01.alteeve.ca
 #scancore::db::1::port			=	5432
