* Updated 'AN::Tools::Remote->dual_command_run()' and '->synchronous_command_run()' to pull the nodes' target, port and password from the new hash values and to store their output into hash keys based on the node's name. * Created 'AN::Tools::ScanCore->update_server_stop_reason()' that allows for an easy way for a caller to set a server's stop reason. * Changed 'AN::Tools::Striker->_cold_stop_anvil()' to set the default 'cancel_ups' value to be that of the dashboard's configuration (if it's enabled, it's stopped). * Updated 'AN::Tools::Striker->_stop_server()' to call 'AN::Tools::ScanCore->update_server_stop_reason()' before stopping a server and again when the server is stopped to set the stop state to 'stopping' and 'user_stopped'. * Updated 'anvil-safe-start' to check for 'anvil-safe-start::drbd::max_wait_time = wait' which, when set, effectively boosts the sync speed and holds a booting node until it finishes sync'ing DRBD to be UpToDate. Also updated it to pull data from the new format hash keys to track each node's node_key, name, port and password to bring it inline with the new way of doing things. * Updated 'anvil-safe-stop' in a similar way so that it now properly stops a node (directly and via Cold Stop).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -229,14 +229,15 @@ tools::anvil-safe-start::enabled	=	0
 # If the estimated resync time, after boosting, is higher that 'max_wait_time',
 # the resync speed will be reset to default and the boot process will proceed
 # with the Inconsistent node being treated as degraded (meaning servers will 
-# likely not boot on it).
+# likely not boot on it). If you want to "boost and hold" so that the node does
+# not appear online until it has resync'ed, set this to 'wait'. 
 # 
 # By default, the boosted speed is 80 MB/sec and the maximum wait time is five
 # minutes (300 seconds). If you wish to tune these values, you can do so here.
 # Please use integers only!
 # 
 #anvil-safe-start::drbd::boost_speed	=	80
-#anvil-safe-start::drbd::max_wait_time	=	300
+#anvil-safe-start::drbd::max_wait_time	=	wait
 #anvil-safe-start::drbd::resync_delay	=	15
 
 # If you plan to use Virtual Machine Manager with a GUI install on your Striker
