* Fixed a bug in 'AN::Tools::Striker->scan_node()' where it would try to connect to the node using the remote_ip, even if it wasn't set. * Updated 'AN::Tools::Check->access()' to return an empty string instead of '2' when a target isn't passed in. * Updated 'AN::Tools::Check->daemon()' to add 'timeout 30' to the status check if the daemon is 'clvmd' as it has a habit of hanging when both nodes are in the cluster but clvmd is only running on one node (which is the case during the 'anvil-safe-start' run). * Added the 'sys::log::log_pid = [0,1]' variable that 'AN::Tools::Log->entry()' checks. If set to '1', the current PID is logged to help dubug what messages below to what script. * Fixed 'AN::Tools::ScanCore->target_power()' to properly tune the power_check cache value so that it works as intended. * Updated 'AN::Tools::Striker->_fence_node()' to always call the fence from the Striker dashboard, rather than using the peer when it is available. This avoids delays (when node 2 fences node 1) and it removes the potential of a hung cluster blocking the fence request (may or may not have been a problem on its own). * Updated the HTML templatelets for fencing nodes to display more cleanly.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -82,6 +82,14 @@ mail_data::sending_domain	=	example.com
 
 
 ##############################################################################
+# System logging                                                             #
+##############################################################################
+
+# If you want to see each processes PID in the logs, set this to '1'.
+sys::log::log_pid					=	0
+
+
+##############################################################################
 # ScanCore Alert Targets                                                     #
 ##############################################################################
 
@@ -1117,27 +1125,5 @@ remote-usb::enable_remote_usb_mount	=	0
 # Anvil! definitions                                                          #
 ###############################################################################
 
-# This defines the cluster. If you want to defined multiple clusters for
-# Striker, copy an entry in this section and increment the variable integer.
-# The order and value do not matter. It's simply a differentiator. If only one
-# entry exists, the Dashboard's Anvil! selection screen will not show and the
-# sole entry will be auto-selected.
-
-# Variables are:
-# name:        Must match the name set in the Anvil!'s "cluster.conf" file. 
-# nodes:       A comma-separated list of nodes. On the Striker server, this
-#              must be resolvable to the target machine (ie: via /etc/hosts +
-#              ~/.ssh/config)
-# company:     A free-form field used to show the owner of the Anvil!. 
-#              Particularly useful for resellers and companies with divisions.
-# description: Also a free-form field used to describe the purpose of the
-#              particular Anvil!.
-# url:         If defined, a link to the given URL will be shown beside the
-#              Anvil!'s name in the Dashboard's Anvil! selection screen. Useful
-#              for linking to internal documentation or similar.
-# ricci_pw:    This is the password used by the 'ricci' user on the Anvil!'s
-#              nodes. It must be set accurately in order to add or remove
-#              servers. If a password is needed to log into one of the nodes,
-#              this password will be used. If this doesn't work, you will need
-#              to manually add the dashboard's public key to each node's root
-#              user's 'authorized_keys' file.
+# This has been moved into the ScanCore database. Anvil! definitions in this
+# file will be entirely ignored now.
